# src/types/enums/storage.ts
@@ -1,0 +1,4 @@
+export enum StorageBucket {
+  GeneratedSites = 'generated-sites',
+  MediaUploads = 'media-uploads',
+}
